# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> emerge: message fix for
	packages.provided.

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> repoman: Made file.size
	a warning for the time being.

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> cvstree.py: Removed the
	auto-ignore regex as it is broken AND it breaks Manifests due to excess
	files allowed into them.

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> emerge: A couple changes
  to the select_dep exception handling for the signing code.

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> env-update.sh: Added
  Spanky's env-update  shell script version.
  
  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Moved more
  code into seperate modules. Added support for Manifest verification and
  usage of 'gpg' 'strict' 'severe' to enable various condition responses.
  
  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_const.py: Moved
  all constants to this module. (All uppercase defines)

  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_data.py: Contains
  all calculated information. uid/gid info. system-specific values. All probed
  information should go here.
  
  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_exception.py:
  Added many exceptions for the GPG verification code. Added many general
  exceptions to help differentiate from explicit portage exceptions and
  those issued by python.
  
  15 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_gpg.py: Handling
  of gpg verification code and keyring management/trust.
  